...
            android:src="@drawable/ic_back_green"
            android:visibility="@{viewModel.isSelectClicked() ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_15"
            android:fontFamily="@font/helvetica_neu_bold"
            android:onClick="@{viewModel::selectClicked}"
            android:padding="@dimen/dimen_10"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_15"
            android:fontFamily="@font/helvetica_neu_bold"
            android:onClick="@{viewModel::onSelectAllClicked}"
            android:padding="@dimen/dimen_10"
            android:text="@string/title_select_all"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_14sp"
            android:visibility="@{viewModel.isSelectClicked() &amp; !viewModel.isAllFormDeleted() ? View.VISIBLE : View.GONE, default = gone}"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button" />
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_count" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_list_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/bottom_view"
...
                android:textSize="@dimen/text_14sp"
                android:visibility="@{viewModel.isSelectClicked() || viewModel.isAllFormDeleted() ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20"
                android:background="@{viewModel.isSelectEnabled() ? @drawable/ic_delete_green : @drawable/ic_delete}"
                android:onClick="@{viewModel.isSelectEnabled() ? viewModel::deleteClicked : viewModel::notSelected}"
                android:padding="@dimen/dimen_10"
                android:visibility="@{viewModel.isSelectClicked() &amp; !viewModel.isAllFormDeleted() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/re_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:drawableLeft="@{viewModel.isSelectEnabled() || viewModel.isSelectAllClicked()? @drawable/ic_camera_recapture_green : @drawable/ic_camera_recapture}"
                android:drawablePadding="@dimen/dimen_5"
                android:onClick="@{viewModel.isSelectEnabled() ? viewModel::reCaptureImage : viewModel::disableClick}"
...
