...
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/selection_back"
                    app:layout_constraintStart_toEndOf="@+id/selection_back"
                    app:layout_constraintTop_toTopOf="@+id/selection_back" />

                <TextView
                    android:id="@+id/selection_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_vertical"
                    android:onClick="@{viewmodel::onOkClicked}"
                    android:padding="@dimen/dimen_20"
...
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

...
